--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.1.1",
     "chromedriver": "^2.31.0",
     "cucumber": "^3.0.0",
     "selenium-webdriver": "^3.5.0"
